# 7wondersofkazakhstan

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
backend/: example.env  json_db.py  main.py  pyproject.toml  requirements.txt  tours.json
backend/app/: config.py  database.py  email_service.py  executors.py  logger.py  security.py  utils.py
backend/app/api/: __init__.py  auth.py  order.py  review.py  subscribe.py  support.py  tour.py  users_me.py
backend/app/models/: __init__.py  booking.py  order.py  review.py  subscribe.py  support.py  token.py  tour.py  user.py
backend/app/schemas/: __init__.py  auth.py  order.py  review.py  subscribe.py  support.py  tour.py  user.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/tours/: tours.json
frontend/src/: index.css  main.jsx
frontend/src/api/: auth.js
frontend/src/components/: BookingWidget.jsx  Contacts.jsx  Footer.jsx  Header.jsx  Layout.jsx  Review.jsx  (+9 more)
public/tours/: tours.json
qa/: README.md
qa/bug_reports/: BUG-001_negative_participants.md
qa/checklists/: subscribe_checklist.md
qa/test_cases/: subscribe_test_cases.md
src/: App.jsx  index.css  main.jsx
src/components/: BookingWidget.jsx  Card.jsx  FeaturedTours.jsx  Footer.jsx  Header.jsx  Hero.jsx  IncludedExcluded.jsx  LoadingPage.jsx  Main.jsx  NotFound.jsx  ParticipantsCounter.jsx  Recommended.jsx  Review.jsx  ReviewCard.jsx  ReviewsInfinite.jsx  ScrollToTopButton.jsx  ThemeToggle.jsx  TourCarousel.jsx
src/data/: reviews.json
src/pages/: Index.jsx  Tours.jsx
(+20 files in other folders)
